--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,15 @@
     "files.associations": {
         "stdlib.h": "c",
         "string": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "array": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "initializer_list": "cpp",
+        "string_view": "cpp",
+        "iostream": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
